update resume and fix spacing

--- a/css/personal.css
+++ b/css/personal.css
@@ -97,7 +97,6 @@ header {
 
 header .center-row {
 	position:relative;
-	top:25%;
 	height:auto;
 }
 
